--- a/controller/src/main/resources/templates/client/product.html
+++ b/controller/src/main/resources/templates/client/product.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head th:insert="partials/head :: content"></head>
 <body>
-<div class="g-navigation" th:insert="partials/navigation :: manager"></div>
+<div class="g-navigation" th:insert="partials/navigation :: client"></div>
 <div class="g-container">
     <main class="g-main container-fluid">
         <div class="d-flex bd-highlight mb-3">
-            <div class="p-2 bd-highlight"><h2>Название товара</h2></div>
+            <!--<div class="p-2 bd-highlight"><h2>Название товара</h2></div>-->
             <div class="p-2 bd-highlight">
             </div>
             <div class="ml-auto p-2 bd-highlight">
                 <a class="btn btn-outline-primary"
-                   href="/manager/catalog" role="button">
+                   href="/client/catalog" role="button">
                     <i class="col-1 bi bi-arrow-90deg-left"> Назад</i>
                 </a>
             </div>
@@ -21,38 +21,33 @@
                 <section class="g-section">
                     <div class="mb-5 row">
                         <label class="col-sm-4 col-form-label">
-                            <img src="https://avatars.githubusercontent.com/u/60327596?s=400&v=4" class="img-thumbnail" alt="...">
+                            <img th:src="@{'/'+${product.image}}" class="img-thumbnail">
                         </label>
                         <label class="col-sm-8 col-form-label">
-                                <h1 class="display-4">Hello, world!</h1>
-                                <hr class="my-4">
+                            <div class="form-group">
+                                <h1 class="display-4" th:text="${product.name}">productName</h1>
+                            </div>
+                            <hr class="my-4">
+                            <div class="form-group">
                                 <div class="form-group">
-                                    <div class="form-group">
-                                        <label for="exampleFormControlTextarea1">Описание</label>
-                                        <textarea class="form-control disabled" id="exampleFormControlTextarea1"
-                                                  rows="5"></textarea>
-                                    </div>
+                                    <label for="exampleFormControlTextarea">Описание</label>
+                                    <textarea class="form-control " readonly th:value="*{product.description}"
+                                              th:field="*{product.description}"
+                                              id="exampleFormControlTextarea"
+                                              rows="10"></textarea>
                                 </div>
-                                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                            </div>
+                            <div class="form-group">
+                                <label>Цена</label>
+                                <b class="lead" th:text="${product.price+' руб.'}"></b>
+                            </div>
+                            <div>
+                                <form th:method="post" th:action="@{/basket/add}">
+                                    <input type="hidden" name="productId" th:value="${product.id}"/>
+                                    <button type="submit" class="btn btn-primary">В корзину</button>
+                                </form>
+                            </div>
                         </label>
-                    </div>
-                    <div class="d-flex bd-highlight mb-3">
-                        <div class="p-2 bd-highlight">
-                            <body>
-                            <form th:method="POST" th:action="@{/fileUpload}" enctype="multipart/form-data">
-                                <p>Выберите файл:<input type="file" name="file" /></p>
-                                <p><input type="submit" value=«Отправить»/></p>
-                            </form>
-                            </body>
-                        </div>
-                        <div class="p-2 bd-highlight">
-                        </div>
-                        <div class="ml-auto p-2 bd-highlight">
-                            <a class="btn btn-outline-primary"
-                               href="/manager/catalog" role="button">
-                                <i class="col-1 bi bi-arrow-90deg-left"> Назад</i>
-                            </a>
-                        </div>
                     </div>
                 </section>
             </div>
