--- a/controller/src/main/resources/templates/manager/order-create.html
+++ b/controller/src/main/resources/templates/manager/order-create.html
@@ -33,7 +33,7 @@
                                 <input class="form-control" type="tel" th:field="*{client.phoneNumber}" name="type"
                                        placeholder="Phone"></label>
                             <label class="col-sm-2 col-form-label">Эл. адрес<br>
-                                <input class="form-control" type="email" th:field="*{client.phoneNumber}" name="type"
+                                <input class="form-control" type="email" th:field="*{client.email}" name="type"
                                        placeholder="email"></label>
                         </div>
                         <h4>Доставка <span class="g-main__subtitle">(
