--- a/controller/src/main/resources/templates/partials/navigation.html
+++ b/controller/src/main/resources/templates/partials/navigation.html
@@ -139,3 +139,52 @@
         </ul>
     </div>
 </nav>
+
+
+<div class="modal fade" th:fragment="client" id="userForm" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form th:method="PATCH" th:action="@{/client/update}" enctype="multipart/form-data">
+                <div class="modal-body">
+                    <div class="mb-3 row">
+                        <label class="col-sm-3 col-form-label">Фамилия<br>
+                            <input class="form-control" type="text" th:field="*{person.surname}"></label>
+                        <label class="col-sm-2 col-form-label">Имя<br>
+                            <input class="form-control" type="text" th:field="*{person.name}"></label>
+                        <label class="col-sm-3 col-form-label">Отчество<br>
+                            <input class="form-control" type="text" th:field="*{person.patronymic}"></label>
+                        <label class="col-sm-2 col-form-label">Телефон<br>
+                            <input class="form-control" type="text" th:field="*{person.phoneNumber}"></label>
+                        <label class="col-sm-2 col-form-label">Эл. адрес<br>
+                            <input class="form-control" type="text" th:field="*{person.email}"></label>
+                    </div>
+                    <h5>Адрес доставки</h5>
+                    <div class="mb-3 row">
+                        <label class="col-sm-2 col-form-label">Город<br>
+                            <input class="form-control" type="text" th:field="*{person.address.city}"></label>
+                        <label class="col-sm-2 col-form-label">Ул.<br>
+                            <input class="form-control" type="text" th:field="*{person.address.street}"></label>
+                        <label class="col-sm-2 col-form-label">Дом<br>
+                            <input class="form-control" type="text" th:field="*{person.address.house}"></label>
+                        <label class="col-sm-2 col-form-label">Корп.<br>
+                            <input class="form-control" type="text" th:field="*{person.address.building}"></label>
+                        <label class="col-sm-2 col-form-label">кв.<br>
+                            <input class="form-control" type="text" th:field="*{person.address.appt}"></label>
+                        <label class="col-sm-2 col-form-label">Индекс<br>
+                            <input class="form-control" type="text" th:field="*{person.address.postalCode}"></label>
+                        <input type="hidden" th:value="*{person.user.id}" th:field="*{person.user.id}">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary">Save</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
