--- a/controller/src/main/resources/templates/partials/head.html
+++ b/controller/src/main/resources/templates/partials/head.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
   <link rel="stylesheet" th:href="@{/css/theme.css}">
   <link rel="stylesheet" th:href="@{/css/excludable.css}">
+  <script type="text/javascript" th:src="@{/js/validation.js}"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
           crossorigin="anonymous">
