cleaned up the code

--- a/controller/src/main/resources/templates/manager/orders.html
+++ b/controller/src/main/resources/templates/manager/orders.html
@@ -26,7 +26,7 @@
             <div class="form-group mx-sm-3 mb-2">
                 <input type="date" th:value="${filter.dateCreateBefore}" th:name="dateCreateBefore">
             </div>
-            <div class="form-group mx-sm-3 mb-1">Статут</div>
+            <div class="form-group mx-sm-3 mb-1">Статуc</div>
             <div>
                 <select name="product" th:field="*{filter.statusOrder}">
                     <option selected th:value="*{filter.statusOrder}"></option>
